name:                unification
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/parsonsmatt/unification#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Unification
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , mtl
                     , lens
  default-language:    Haskell2010
